--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,7 +1,10 @@
 $icon-font-path: '../fonts/';
+$fa-font-path: "/bower_components/font-awesome/fonts/";
+
 
 // bower:scss
 @import "bower_components/bootstrap-sass/assets/stylesheets/_bootstrap.scss";
+@import "bower_components/font-awesome/scss/font-awesome.scss";
 // endbower
 
 .browserupgrade {
@@ -13,7 +16,7 @@ $icon-font-path: '../fonts/';
 
 /* Space out content a bit */
 body {
-  padding-top: 20px;
+  padding-top: 50px;
   padding-bottom: 20px;
   height: 100%;
 }
@@ -26,10 +29,29 @@ body {
   padding-right: 15px;
 }
 
+.boru-header{
+  min-height: 80px;
+  box-shadow: rgba(0, 0, 0, 0.117647) 0px 1px 3px;
+  display: flex;
+  align-items: center;
+
+}
+
+nav.navbar{
+  background-color: white;
+   // Animation
+   -webkit-transition: all 0.4s ease;
+   transition: all 0.4s ease;
+}
+
+nav.navbar.shrink {
+  min-height: 35px;
+}
+
 /* Custom page header */
 .header {
   border-bottom: 1px solid #e5e5e5;
-
+  
   /* Make the masthead heading the same height as the navigation */
   h3 {
     margin-top: 0;
@@ -95,9 +117,8 @@ header.carousel .fill {
 
 .boru-section-break {
   background: #4a71c0;
-  min-height: 300px;
-  padding: 50px 0;
-
+  min-height: 300px; 
+  color: white;
 }
 
 .flex-row {
@@ -111,16 +132,44 @@ header.carousel .fill {
   }
 
   .collaboration-header{
+      padding-top:10px;
       align-items: baseline;
       justify-content: center;
   }
+
+  .fencing-ireland-logo, .pentathlon-ireland-logo{   
+    width: 300px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+}
+.how-to-start{
+  
+  .how-to-start-header{
+    display:flex;
+    justify-content:center;
+  }
+
+.how-to-start-icons{
+  align-items: center;
+  justify-content: space-between;
+
+  .icon{   
+    width: 300px;
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    flex-direction: column;
+  }
+
+  .icon-text{
+    font-size:18px;
+    margin-top: -30px;
+  }
+}
 }
 
-.fencing-ireland-logo, .pentathlon-ireland-logo{
-  height:300px;
-  width: 300px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
+
+
 
