--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,5 +1,5 @@
-$icon-font-path: '../fonts/';
-$fa-font-path: "../icons/";
+$icon-font-path: '../fonts';
+$fa-font-path: "../icons";
 
 
 // bower:scss
