--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -35,6 +35,12 @@ body {
   display: flex;
   align-items: center;
 
+ @media (max-width: 767px) {
+  .container{
+    width: 100%;
+  }
+ }
+
 }
 
 nav.navbar{
@@ -81,30 +87,7 @@ header.carousel .fill {
     background-size: cover;
 }
 
-/* Responsive: Portrait tablets and up */
-@media screen and (min-width: 768px) {
-  .container {
-    max-width: 980px;
-  }
 
-  /* Remove the padding we set earlier */
-  .header,
-  .marketing,
-  .footer {
-    padding-left: 0;
-    padding-right: 0;
-  }
-
-  /* Space out the masthead */
-  .header {
-    margin-bottom: 30px;
-  }
-
-  /* Remove the bottom border on the jumbotron for visual effect */
-  .jumbotron {
-    border-bottom: 0;
-  }
-}
 
 
 /* Custom page footer */
